[gd_scene load_steps=26 format=3 uid="uid://cjaq8hsrk4g17"]

[ext_resource type="Texture2D" uid="uid://bjjai44ldmybt" path="res://Recursos/Fondos/Inicio.png" id="1_4q24d"]
[ext_resource type="Texture2D" uid="uid://cm0vqkr4svkux" path="res://Recursos/Letras/logo.png" id="2_0c4oq"]
[ext_resource type="FontFile" uid="uid://dr8yvckycxwa3" path="res://Recursos/Letras/Born2bSportyV2.ttf" id="3_gkkad"]
[ext_resource type="Script" path="res://FinMensaje.gd" id="3_sowcj"]
[ext_resource type="Texture2D" uid="uid://br6v51prqbx1r" path="res://Recursos/Personajes/Presentadora.png" id="4_ox85l"]
[ext_resource type="Theme" uid="uid://coood86movgp4" path="res://Recursos/Letras/BtnsColor.tres" id="5_0b80n"]

[sub_resource type="Animation" id="Animation_gjbni"]
resource_name = "Aparece"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CuadroDialogo:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.811765, 0.537255, 0.74902, 0), Color(0.811765, 0.537255, 0.74902, 1)]
}

[sub_resource type="Animation" id="Animation_hr461"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CuadroDialogo:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.811765, 0.537255, 0.74902, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jb61e"]
_data = {
"Aparece": SubResource("Animation_gjbni"),
"RESET": SubResource("Animation_hr461")
}

[sub_resource type="Animation" id="Animation_koqji"]
resource_name = "Dialog"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Presentadora:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Calla"]
}

[sub_resource type="Animation" id="Animation_tiohk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Presentadora:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Habla2"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e0cdb"]
_data = {
"Dialog": SubResource("Animation_koqji"),
"RESET": SubResource("Animation_tiohk")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_mxp2n"]
atlas = ExtResource("4_ox85l")
region = Rect2(124, 0, 124, 183)

[sub_resource type="AtlasTexture" id="AtlasTexture_yr0a7"]
atlas = ExtResource("4_ox85l")
region = Rect2(248, 0, 124, 183)

[sub_resource type="AtlasTexture" id="AtlasTexture_japfp"]
atlas = ExtResource("4_ox85l")
region = Rect2(0, 184, 130, 182)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkj20"]
atlas = ExtResource("4_ox85l")
region = Rect2(244, 186, 122, 183)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqgi6"]
atlas = ExtResource("4_ox85l")
region = Rect2(123, 185, 123, 183)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylfs5"]
atlas = ExtResource("4_ox85l")
region = Rect2(252, 368, 126, 183)

[sub_resource type="AtlasTexture" id="AtlasTexture_wa5jd"]
atlas = ExtResource("4_ox85l")
region = Rect2(0, 368, 125, 182)

[sub_resource type="AtlasTexture" id="AtlasTexture_vp6sq"]
atlas = ExtResource("4_ox85l")
region = Rect2(123, 368, 123, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf1od"]
atlas = ExtResource("4_ox85l")
region = Rect2(0, 0, 27, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_ji8cy"]
atlas = ExtResource("4_ox85l")
region = Rect2(0, 0, 130, 183)

[sub_resource type="SpriteFrames" id="SpriteFrames_1yt17"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxp2n")
}],
"loop": true,
"name": &"Calla",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yr0a7")
}],
"loop": true,
"name": &"Calla2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_japfp")
}],
"loop": true,
"name": &"Felicita ",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkj20")
}],
"loop": true,
"name": &"Fin_saludo",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_rqgi6")
}],
"loop": true,
"name": &"Habla",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylfs5")
}],
"loop": true,
"name": &"Habla2",
"speed": 1.0
}, {
"frames": [{
"duration": 4.0,
"texture": SubResource("AtlasTexture_wa5jd")
}],
"loop": true,
"name": &"Hola",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vp6sq")
}],
"loop": true,
"name": &"No",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf1od")
}],
"loop": true,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ji8cy")
}],
"loop": true,
"name": &"otro",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_6dhha"]
resource_name = "Fin"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0jgno"]
_data = {
"Fin": SubResource("Animation_6dhha")
}

[node name="Fin" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -1.0
offset_top = -38.0
offset_right = 1399.0
offset_bottom = 729.0
texture = ExtResource("1_4q24d")

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 268.0
offset_top = 92.0
offset_right = 606.0
offset_bottom = 391.0
texture = ExtResource("2_0c4oq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("3_sowcj")

[node name="Timer" type="Timer" parent="CanvasLayer"]
wait_time = 3.0

[node name="CuadroDialogo" type="ColorRect" parent="CanvasLayer"]
offset_left = 803.0
offset_top = 509.0
offset_right = 1355.0
offset_bottom = 685.0
color = Color(0.811765, 0.537255, 0.74902, 0)

[node name="AnimationPlayer_Cuadro" type="AnimationPlayer" parent="CanvasLayer"]
autoplay = "Aparece"
libraries = {
"": SubResource("AnimationLibrary_jb61e")
}

[node name="ReferenceRect" type="ReferenceRect" parent="CanvasLayer"]
offset_left = 14.0
offset_right = 1403.0
offset_bottom = 694.0

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 831.0
offset_top = 531.0
offset_right = 1237.0
offset_bottom = 650.0
theme_override_fonts/font = ExtResource("3_gkkad")
theme_override_font_sizes/font_size = 30
autowrap_mode = 2
visible_characters = 0
visible_ratio = 0.0

[node name="Button" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 1152.0
offset_top = 631.0
offset_right = 1248.0
offset_bottom = 671.0
theme = ExtResource("5_0b80n")
theme_override_fonts/font = ExtResource("3_gkkad")
theme_override_font_sizes/font_size = 20
text = "Siquiente
"

[node name="AnimationPlayer_Button" type="AnimationPlayer" parent="CanvasLayer"]
autoplay = "Dialog"
libraries = {
"": SubResource("AnimationLibrary_e0cdb")
}

[node name="Presentadora" type="AnimatedSprite2D" parent="CanvasLayer"]
position = Vector2(1324, 589)
scale = Vector2(1.23791, 1.23791)
sprite_frames = SubResource("SpriteFrames_1yt17")
animation = &"Habla2"

[node name="AnimationPlayer_Scenes" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0jgno")
}

[connection signal="timeout" from="CanvasLayer/Timer" to="CanvasLayer" method="_on_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/Button" to="CanvasLayer" method="_on_button_pressed"]
